RESOLVED FIXED199586
Cleanup uses of NetworkProcess::m_sessionByConnection
https://bugs.webkit.org/show_bug.cgi?id=199586
Summary Cleanup uses of NetworkProcess::m_sessionByConnection
Chris Dumez
Reported 2019-07-08 14:00:56 PDT
Cleanup uses of NetworkProces::m_sessionByConnection.
Attachments
Patch (3.06 KB, patch)
2019-07-08 14:08 PDT, Chris Dumez
no flags
Patch (3.08 KB, patch)
2019-07-08 14:13 PDT, Chris Dumez
no flags
Patch (3.08 KB, patch)
2019-07-08 14:41 PDT, Chris Dumez
no flags
Patch (5.66 KB, patch)
2019-07-09 14:49 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-08 14:08:02 PDT
Chris Dumez
Comment 2 2019-07-08 14:13:46 PDT
Chris Dumez
Comment 3 2019-07-08 14:41:24 PDT
Chris Dumez
Comment 4 2019-07-08 15:28:35 PDT
Comment on attachment 373666 [details] Patch Clearing flags on attachment: 373666 Committed r247230: <https://trac.webkit.org/changeset/247230>
Chris Dumez
Comment 5 2019-07-08 15:28:37 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 6 2019-07-09 11:08:39 PDT
It looks like the changes in https://trac.webkit.org/changeset/247230/webkit caused this test to crash on Debug WK2 for Mac and iOS: storage/domstorage/localstorage/private-browsing-affects-storage.html History: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=storage%2Fdomstorage%2Flocalstorage%2Fprivate-browsing-affects-storage.html Crash: https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK2%20(Tests)/r247258%20(3475)/storage/domstorage/localstorage/private-browsing-affects-storage-crash-log.txt I was able to reproduce this locally with command: run-webkit-tests --root debug-247230 storage/domstorage/localstorage/private-browsing-affects-storage.html --iterations 20 -f --debug
Radar WebKit Bug Importer
Comment 7 2019-07-09 11:10:18 PDT
Ryan Haddad
Comment 8 2019-07-09 13:57:10 PDT
(In reply to Truitt Savell from comment #6) > It looks like the changes in https://trac.webkit.org/changeset/247230/webkit > caused this test to crash on Debug WK2 for Mac and iOS: > storage/domstorage/localstorage/private-browsing-affects-storage.html ASSERTION FAILED: addResult.iterator->value == sessionID /Volumes/Data/slave/mojave-debug/build/Source/WebKit/NetworkProcess/NetworkProcess.cpp(2670) : void WebKit::NetworkProcess::webPageWasAdded(IPC::Connection &, PAL::SessionID, WebCore::PageIdentifier, WebCore::PageIdentifier) Chris, can you take a look at this or should we revert?
Truitt Savell
Comment 9 2019-07-09 14:01:54 PDT
Reverted r247230 for reason: Caused storage/domstorage/localstorage/private-browsing-affects-storage.html to crash with an assertion. Committed r247277: <https://trac.webkit.org/changeset/247277>
Chris Dumez
Comment 10 2019-07-09 14:06:09 PDT
(In reply to Ryan Haddad from comment #8) > (In reply to Truitt Savell from comment #6) > > It looks like the changes in https://trac.webkit.org/changeset/247230/webkit > > caused this test to crash on Debug WK2 for Mac and iOS: > > storage/domstorage/localstorage/private-browsing-affects-storage.html > > ASSERTION FAILED: addResult.iterator->value == sessionID > /Volumes/Data/slave/mojave-debug/build/Source/WebKit/NetworkProcess/ > NetworkProcess.cpp(2670) : void > WebKit::NetworkProcess::webPageWasAdded(IPC::Connection &, PAL::SessionID, > WebCore::PageIdentifier, WebCore::PageIdentifier) > > Chris, can you take a look at this or should we revert? Sihui, Alex, I believe my new assertion may have uncovered a bug in the existing code.
Chris Dumez
Comment 11 2019-07-09 14:49:02 PDT
WebKit Commit Bot
Comment 12 2019-07-09 15:40:15 PDT
Comment on attachment 373770 [details] Patch Clearing flags on attachment: 373770 Committed r247283: <https://trac.webkit.org/changeset/247283>
WebKit Commit Bot
Comment 13 2019-07-09 15:40:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.