Cleanup uses of NetworkProcess::m_sessionByConnection https://bugs.webkit.org/show_bug.cgi?id=199586

Reviewed by Alex Christensen.

Avoid double HashMap lookups and call add() instead of ensure() when appropriate.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::networkSessionByConnection const):
(WebKit::NetworkProcess::webPageWasAdded):
(WebKit::NetworkProcess::webProcessWasDisconnected):


Canonical link: https://commits.webkit.org/213531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247283 268f45cc-cd09-0410-ab3c-d52691b4dbfc